--- a/src/layout/layout.scss
+++ b/src/layout/layout.scss
@@ -2,6 +2,8 @@
 @import './scss/index.scss';
 @import url('https://fonts.googleapis.com/css?family=Raleway:100,300,400,600,700&display=swap');
 @import url('https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css');
+@import url('https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.css');
+@import url('https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css');
 
 body {
   font-family: 'Raleway', sans-serif;
