--- a/src/layout/scss/index.scss
+++ b/src/layout/scss/index.scss
@@ -2,6 +2,7 @@
 $primary-color: #2f6ce0;
 $secondary-color: #b1dffe;
 $white: #ffffff;
+$highly-light-grey-bg: #fafafa;
 $light-grey-bg: #f1f1f1;
 $black: #272c36;
 $grey-overlay-color: #262933;
