Fixed issues with css

--- a/src/layout/scss/article.scss
+++ b/src/layout/scss/article.scss
@@ -22,7 +22,7 @@ article.article {
     margin-bottom: 10px;
   }
 
-  ul {
+  ul.simple-list {
     margin-top: 15px;
     color: $grey-overlay-color;
     font-size: 1rem;
