--- a/src/components/common/Showcase/Showcase.scss
+++ b/src/components/common/Showcase/Showcase.scss
@@ -1,6 +1,18 @@
+@import '../../../layout/scss/';
+
 .showcase-container {
   padding: 20px 0px;
-  img {
-    width: 100%;
+  .video-container {
+    margin-bottom: 15px;
+    img {
+      width: 100%;
+    }
+
+    p.label {
+      color: $primary-color;
+      padding: 6px 12px;
+      font-weight: 600;
+      text-align: center;
+    }
   }
 }
