--- a/src/layout/MobileMenu/MobileMenu.scss
+++ b/src/layout/MobileMenu/MobileMenu.scss
@@ -72,8 +72,7 @@
       a {
         display: inline-block;
         padding-right: 25px;
-        padding-left: 0px;
-        svg.social {
+        svg {
           font-size: 2.5rem;
           color: $primary-color;
         }
