--- a/src/layout/scss/article.scss
+++ b/src/layout/scss/article.scss
@@ -40,4 +40,40 @@ article.article {
       margin-left: -1em;
     }
   }
+
+  .video-demos {
+    padding-top: 20px;
+    .video-frame {
+      overflow: hidden;
+      padding-bottom: 56.25%;
+      position: relative;
+      height: 0;
+      iframe {
+        left: 0;
+        top: 0;
+        height: 100%;
+        width: 100%;
+        position: absolute;
+      }
+    }
+  }
+
+  .skills-container {
+    padding: 10px 0px;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+
+    .skill-wrapper {
+      margin-right: 12px;
+      img {
+        max-height: 60px;
+      }
+      p {
+        font-weight: 600;
+        text-align: center;
+        margin-top: -8px;
+      }
+    }
+  }
 }
