--- a/src/layout/scss/article.scss
+++ b/src/layout/scss/article.scss
@@ -61,17 +61,18 @@ article.article {
     padding: 10px 0px;
     display: flex;
     flex-wrap: wrap;
-    align-items: center;
+    // align-items: center;
 
     .skill-wrapper {
-      margin-right: 12px;
+      margin-right: 15px;
+      text-align: center;
       img {
-        max-height: 60px;
+        max-height: 50px;
       }
       p {
         font-weight: 600;
         text-align: center;
-        margin-top: -8px;
+        margin-top: -4px;
       }
     }
   }
