--- a/src/layout/layout.scss
+++ b/src/layout/layout.scss
@@ -1,16 +1,16 @@
 @import './scss/reset.scss';
 @import './scss/index.scss';
-@import url('https://fonts.googleapis.com/css?family=Raleway:100,300,400,500,600,700&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Lato:100,300,400,500,600,700&display=swap');
 @import url('https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css');
 @import url('https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.css');
 @import url('https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css');
 
 body {
-  font-family: 'Raleway', sans-serif;
+  font-family: 'Lato', sans-serif;
 }
 
 html {
-  font-size: 14px;
+  font-size: 14.5px;
 }
 
 .layout-container {
