--- a/src/layout/scss/article.scss
+++ b/src/layout/scss/article.scss
@@ -72,6 +72,7 @@ article.article {
         font-weight: 600;
         text-align: center;
         margin-top: -4px;
+        font-size: 0.95rem;
       }
     }
   }
