--- a/src/templates/project/project.scss
+++ b/src/templates/project/project.scss
@@ -11,8 +11,6 @@
     flex-basis: 240px;
 
     .buttons {
-      font-size: 1.1rem;
-      font-weight: 600;
       color: $black;
 
       button.main-menu {
@@ -22,6 +20,8 @@
         background: $light-grey-bg;
         margin-bottom: 1px;
         cursor: pointer;
+        font-size: 1.1rem;
+        font-weight: 500;
 
         svg {
           float: right;
@@ -87,6 +87,7 @@
           padding: 15px 18px;
           font-size: 1rem;
           flex: 0.5;
+          border-radius: 0px;
 
           svg {
             display: none;
