--- a/src/layout/layout.scss
+++ b/src/layout/layout.scss
@@ -25,9 +25,11 @@ html {
     align-items: center;
     max-width: 1400px;
     margin: auto;
+    transition: padding 0.6s ease;
 
     .logo-container {
       width: 40px;
+      transition: all 0.6s ease;
     }
 
     .main-menu {
@@ -56,9 +58,9 @@ html {
         font-size: 1.3rem;
       }
 
-      @media screen and (min-width: 501px) {
-        padding-right: 10px;
-      }
+      // @media screen and (min-width: 501px) {
+      //   padding-right: 10px;
+      // }
     }
 
     background: $white;
@@ -82,6 +84,22 @@ html {
         }
       }
     }
+
+    &.sticky-header {
+      background: $highly-light-grey-bg;
+      border-bottom: 1px solid $light-grey-bg;
+      @media screen and (min-width: 501px) {
+        padding: 6px 25px;
+        transition: padding 0.6s ease;
+        .logo-container {
+          width: 35px;
+          transition: all 0.6s ease;
+          img {
+            width: 100%;
+          }
+        }
+      }
+    }
   }
 
   .main-content {
@@ -89,6 +107,8 @@ html {
   }
 
   @import './scss/article.scss';
+
+  @import './scss/page.scss';
 }
 
 .desktop-only {
