--- a/src/components/common/Showcase/Showcase.scss
+++ b/src/components/common/Showcase/Showcase.scss
@@ -1,7 +1,7 @@
 @import '../../../layout/scss/';
 
 .showcase-container {
-  padding: 20px 0px;
+  padding-bottom: 20px;
   .video-container {
     margin-bottom: 15px;
     img {
