--- a/src/layout/scss/article.scss
+++ b/src/layout/scss/article.scss
@@ -14,6 +14,7 @@ article.article {
     font-size: 1.1rem;
     font-weight: 600;
     margin-bottom: 17px;
+    margin-top: 20px;
   }
 
   p {
@@ -75,7 +76,7 @@ article.article {
   }
 
   .skills-container {
-    padding-bottom: 15px;
+    padding-bottom: 5px;
     display: flex;
     flex-wrap: wrap;
 
