--- a/src/pages/index.scss
+++ b/src/pages/index.scss
@@ -64,6 +64,10 @@
         }
       }
 
+      .phone-text {
+        font-size: 1.2rem;
+      }
+
       p {
         padding-top: 15px;
         padding-bottom: 20px;
