--- a/src/pages/index.scss
+++ b/src/pages/index.scss
@@ -138,6 +138,15 @@
           }
         }
       }
+
+      .avatar-section {
+        width: 130px;
+        height: 130px;
+        margin: auto;
+        margin-bottom: 5px;
+        background: url(../images/profile-avatar.svg) no-repeat;
+        background-size: contain;
+      }
     }
   }
 }
